<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:gravity="center_horizontal|bottom"
            android:text="@string/home_appliances"
            android:textSize="30sp" />

        <ToggleButton
            android:id="@+id/btn_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="4dp"
            android:background="@color/red"
            android:text="@string/btn_light"
            android:textSize="20sp"
            android:textOff="@string/light_off"
            android:textOn="@string/light_on" />

        <ToggleButton
            android:id="@+id/btn_door"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="4dp"
            android:background="@color/red"
            android:text="@string/btn_light"
            android:textSize="20sp"
            android:textOff="@string/door_close"
            android:textOn="@string/door_open" />

    </LinearLayout>
</ScrollView>