<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="285dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/icon" />

        <Button
            android:id="@+id/btn12"
            style="@style/OnClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="4dp"
            android:text="@string/newspaper_reading" />

        <Button
            android:id="@+id/btn13"
            style="@style/OnClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="4dp"
            android:text="@string/sensor_data" />

        <Button
            android:id="@+id/btn14"
            style="@style/OnClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="4dp"
            android:text="@string/home_appliances" />

    </LinearLayout>
</ScrollView>