<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginBottom="48dp"
        android:text="@string/switch1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensor" />

    <TextView
        android:id="@+id/sensor"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="219dp"
        android:layout_marginBottom="160dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/data"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/update"
        android:layout_width="405dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/last_update"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/sensor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>